<resources>
    <string name="app_name">OrgaNize</string>
    <string name="app_logo">App Logo</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="full_name">Nombre completo</string>
    <string name="dashboard">Inicio</string>
    <string name="calendar">Calendario</string>
    <string name="settings">Configuración</string>
    <string name="add_task">Añadir tarea</string>
    <string name="error_empty_email">El correo es obligatorio</string>
    <string name="error_invalid_email">Correo electrónico inválido</string>
    <string name="error_empty_password">La contraseña es obligatoria</string>
    <string name="error_short_password">La contraseña debe tener al menos 6 caracteres</string>
    <string name="error_empty_name">El nombre es obligatorio</string>
    <string name="error_empty_confirm_password">Confirma tu contraseña</string>
    <string name="error_passwords_dont_match">Las contraseñas no coinciden</string>
    <string name="login_success">Inicio de sesión exitoso</string>
    <string name="register_success">Registro exitoso</string>
    <string name="open">Open</string>
    <string name="close">Close</string>



</resources>